--- a/src/pages/rates/rates.scss
+++ b/src/pages/rates/rates.scss
@@ -5,7 +5,7 @@ page-rates {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        background-color: #1abc9c;
+        background-color: #f15d4a;
     }
 
     h4 {
