rating, geolocation and fcm

--- a/src/components/smilerate/smilerate.html
+++ b/src/components/smilerate/smilerate.html
@@ -1,3 +1,4 @@
 <!-- Generated template for the SmilerateComponent component -->
 <canvas width="250" height="250" #smileCanvas></canvas>
-<div id="rating">{{rating}}</div>
+<div id="rating">{{rating}}</div> 
+<button ion-button color="light" (click)="rated(rating)">Let Us Know!</button> 
