--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,7 @@
 page-home {
-
+    .card-title {
+        font-weight: bold;
+        text-align: center;
+        color: rgb(211, 35, 35);
+      }  
 }
