--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,3 +1,11 @@
 page-login {
-
+    ion-card {
+        position: relative;
+        text-align: center;
+      }
+      .card-title {
+        font-weight: bold;
+        text-align: center;
+        color: rgb(211, 35, 35);
+      }  
 }
