--- a/src/pages/maincontent/maincontent.scss
+++ b/src/pages/maincontent/maincontent.scss
@@ -1,3 +1,8 @@
 page-maincontent {
-
+    .card-title {
+        font-weight: bold;
+        text-align: center;
+        color: rgb(211, 35, 35);
+      }  
 }
+
