--- a/src/pages/maincontentg/maincontentg.scss
+++ b/src/pages/maincontentg/maincontentg.scss
@@ -4,4 +4,11 @@ page-maincontentg {
         text-align: center;
         color: rgb(211, 35, 35);
       }  
+      .selectcustom {
+       // position: relative;
+        //max-width: 100%;
+        white-space: normal!important;
+       // color: rgb(211, 35, 35);
+        //text-align: left;
+    }
 }
